Fixing button base alignment

--- a/css/cactu.css
+++ b/css/cactu.css
@@ -1052,6 +1052,9 @@ textarea {
   border: 1px solid #dee2e6;
   border-radius: 4px;
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   background-color: #fff;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
@@ -1102,12 +1105,6 @@ textarea[readonly] {
   opacity: 1;
 }
 
-@media only screen and (max-device-width: 767px) {
-  select[multiple] {
-    background-color: red;
-  }
-}
-
 input[type="range"]:focus {
   outline: none;
 }
@@ -1118,21 +1115,26 @@ input[type="range"]::-moz-focus-outer {
 
 select:not([size]):not([multiple]) {
   height: calc(2.25rem + 2px);
-  padding: .375rem 1.75rem .375rem .75rem;
+  padding: 0.375rem 1.75rem 0.375rem 0.75rem;
   background: #fff url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") no-repeat right 0.75rem center;
   background-size: 8px 10px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
 }
 
-select:not([size]):not([multiple]):disabled {
+select:not([size]):disabled {
   background-color: #e9ecef;
 }
 
-select:not([size]):not([multiple])::-ms-value {
+select:not([size])::-ms-value {
   color: #343a40;
   background-color: #fff;
+}
+
+@media only screen and (max-device-width: 1199px) {
+  select[multiple] {
+    padding: 0.375rem 1.75rem 0.375rem 0.75rem;
+    background: #fff url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 10'%3E%3Cg fill='%23343a40' %3E%3Ccircle cx='4' cy='2.2' r='2' /%3E%3Ccircle cx='4' cy='7.8' r='2' /%3E%3C/g%3E%3C/svg%3E") no-repeat right 0.75rem center;
+    background-size: 8px 10px;
+  }
 }
 
 select:-moz-focusring {
